fix(behaviors/position): adjust the css position of 'end'-aligned elements
use `bottom`/`right` as css position anchors for 'end'-aligned elements to improve animation origins;
improve the calculation of the initial `targetBox` dimensions by using a separate class name which is not used as animation class to improve the initial positioning;
fix an issue calculating the available space for triggers which are scrolled off-screen;

--- a/src/behaviors/overlay/overlay.css
+++ b/src/behaviors/overlay/overlay.css
@@ -2,7 +2,13 @@
   position: absolute;
   overflow: auto;
   contain: content;
-  will-change: top, left;
+  will-change: top, left, right, bottom;
+  background-color: var(--color-bg);
+}
+
+.ui-check-layout {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .ui-invisible {
